correction in gap

--- a/style.css
+++ b/style.css
@@ -335,7 +335,8 @@ a {
     border-radius: 20px;
     padding: 10px 20px;
     display: flex;
-    gap: 20px;
+    row-gap: 20px;
+    column-gap: 30px;
     /* box-shadow: 0 1px 4px rgb(0,0,0,0.16); */
 }
 
